--- a/NetworkingConnections.html
+++ b/NetworkingConnections.html
@@ -19,6 +19,7 @@
         </nav>
         <h1>Networking and Building Connections</h1>
     </header>
+  <main>
   <section>
     <h2>Why Networking Matters</h2>
     <p>
@@ -77,7 +78,7 @@
 
   <section>
     <h2>UMSI Career Fair</h2>
-    <img src="images/UMSI_CareerFair_02062025_01.jpg" alt="Networking event image" width="350" height="auto">
+    <img src="images/UMSI_CareerFair_02062025_01.jpg" alt="Networking event image" width="350">
   </section>
 
 </main>
