Fix image width style in InternshipSearch.html

--- a/InternshipSearch.html
+++ b/InternshipSearch.html
@@ -42,7 +42,7 @@
         </p>
     </section>
 
-<img src="images/people working.jpg" alt="People in different jobs" style="width:350px; height:auto;">
+<img src="images/people working.jpg" alt="People in different jobs" style="width:350">
 
     <section>
         <h2>Planning & Timeline Resources</h2>
