Add main content ID for accessibility

--- a/InternshipSearch.html
+++ b/InternshipSearch.html
@@ -7,7 +7,7 @@
 </head>
 <body>
         <header>
-  <a href = "">Skip to Main Content</a>
+  <a href = "#main-content">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -19,7 +19,7 @@
         </nav>
         <h1>Resources for finding an Internship</h1>
     </header>
-    <main>
+    <main id="main-content">
         <section>
         <h2>Finding the Right Internship</h2>
         <p>
