--- a/NetworkingConnections.html
+++ b/NetworkingConnections.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-  <a href = "">Skip to Main Content</a>
+  <a href = "#main-content">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -19,7 +19,7 @@
         </nav>
         <h1>Networking and Building Connections</h1>
     </header>
-  <main>
+  <main id="main-content">
   <section>
     <h2>Why Networking Matters</h2>
     <p>
